--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 tasty_bytes_dbt_demo/target/
 tasty_bytes_dbt_demo/dbt_packages/
 tasty_bytes_dbt_demo/logs/
-/*.sql
+tasty_bytes_dbt_demo/profiles.yml
