--- a/tasty_bytes_dbt_demo/packages.yml
+++ b/tasty_bytes_dbt_demo/packages.yml
@@ -1,5 +1,16 @@
-# packages:
-#   - package: dbt-labs/dbt_utils
-#     version: 1.3.0 
-#   - package: Snowflake-Labs/dbt_semantic_view
-#     version: 1.0.3
+packages: 
+  # Code generatie helpers 
+  - package: dbt-labs/codegen 
+    version: 0.12.1 
+
+  # Data quality tests (Great Expectations port) 
+  - package: calogica/dbt_expectations 
+    version: 0.10.3 
+
+  # Snowflake data masking 
+  - package: entechlog/dbt_snow_mask 
+    version: 1.5.0 
+
+  # Utility functies (standaard) 
+  - package: dbt-labs/dbt_utils 
+    version: 1.3.0
